Fri Jun 09 11:50:55 EDT 2006	Nick Castellano <entropy@freetds.org>
	* locales.conf: use same date format as Sybase in default and en_US

Thu Jun 08 10:18:50 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/tds/unittests/t0007.c:
	- improved to detect possible date problems

Wed Jun 07 14:37:56 EDT 2006	Nick Castellano <entropy@freetds.org>
	* src/tds/convert.c: correctly convert dates in January

Tue Jun 06 12:02:10 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* configure.ac src/tds/config.c:
	- fix tsql -C for sybase compatibility

Tue Jun 06 11:32:24 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/tds/mem.c: use calloc instead of malloc/memset

Mon Jun 05 13:42:24 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/ctlib/ct.c src/tds/token.c:
	- style and cleanup

Mon May 29 13:38:05 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* m4/sprintf_i64_format.m4: fix quoting

Mon May 29 12:58:38 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* NEWS include/tds.h src/tds/token.c:
	- make tds_alloc_get_string static

Mon May 15 17:11:54 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/odbc/odbc.c:
	- applied fixes from Charlene Herring (cf. "Problems when
	  using odbc : SQLPutData, SQLExecDirect,Decimals" 2006/05/14

Sun May 14 14:34:04 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/odbc/descriptor.c: fix memory error

Sat May 13 10:49:40 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/odbc/unittests/copydesc.c: improve

Mon May 08 11:38:30 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/odbc/descriptor.c src/odbc/unittests/Makefile.am:
	* src/odbc/unittests/copydesc.c(added): add test for SQLCopyDesc

Fri Apr 21 17:10:00 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/odbc/sql2tds.c: use new tds_convert types

Fri Apr 21 09:45:56 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* doc/htdoc/faq.html: fix html compatibility
